<resources>
    <string name="app_name">Breaking Bad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_breaking_bad_character">Search Breaking Bad Character</string>
    <string name="search">Search</string>
    <string name="breaking_bad_character_image">Breaking Bad Character Image</string>
    <string name="breaking_bad_character">Breaking Bad Character</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="status">Status</string>
    <string name="nick_name">Nick Name</string>
    <string name="season_appearance">Season Appearance</string>
</resources>