<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/detail_layout_padding"
    tools:context=".view.BreakingBadCharacterDetailsFragment">


    <ImageView
        android:id="@+id/detailCharacterImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/breaking_bad_character_image" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/NameDetailStyle" />

    <TextView
        android:id="@+id/occupationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        style="@style/DetailStyle" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        style="@style/DetailStyle" />

    <TextView
        android:id="@+id/nickNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nick_name"
        style="@style/DetailStyle" />

    <TextView
        android:id="@+id/seasonAppearanceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/season_appearance"
        style="@style/DetailStyle" />
</LinearLayout>